force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__Action__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>purchase</fullName>
            </value>
            <value>
                <fullName>authorization</fullName>
            </value>
            <value>
                <fullName>refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>