force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__IsRefunded__c.field-meta.xml
<CustomField>
    <fullName>sfcma__IsRefunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refunded?</label>
    <type>Checkbox</type>
</CustomField>