force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__PaymentIntent__c.field-meta.xml
<CustomField>
    <fullName>sfcma__PaymentIntent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Intent</label>
    <referenceTo>sfcma__PaymentIntent__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>