force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>sfcma__PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>