force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__RefundAmount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>