force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__Subscription__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Subscription__c</fullName>
    <label>Subscription</label>
    <referenceTo>sfcma__Subscription__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>